k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  selector:
    app: portfolio
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  nodePort: 30080
